Add item to existing dataset
